* unify test directories

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<script src="http://yui.yahooapis.com/3.0.0/build/yui/yui-min.js"></script> 
-		<script src="spec/js/jsVimTest.js"></script> 
+		<script src="spec/jsVim/jsVimTest.js"></script> 
 	</head>
 	<body>
 		<form>
