flip to using prototype object syntax, fix(?) acceptance test

--- a/test.html
+++ b/test.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
 		<script src="http://yui.yahooapis.com/3.0.0/build/yui/yui-min.js"></script> 
-		<script src="spec/jsVim/jsVimTest.js"></script> 
 		<link type="text/css" rel="stylesheet" href="http://yui.yahooapis.com/3.0.0/build/cssfonts/fonts-min.css" />
 		<style type="text/css">
 			body { margin: 0; padding: 0; }
@@ -43,6 +42,8 @@
 			</div>
 			<div id="testLogger"></div>
 		</form>
+		<script type='text/javascript' src='prototype.js'></script>
 		<script type='text/javascript' src='jsVim.js'></script>
+		<script src="spec/jsVim/jsVimTest.js"></script> 
 	</body>
 </html>
