swtich to cucumber from rspec for selenium tests, make it work.  solved a goofy issue with keyDown vs keyPress.  I'm more confident now

--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
 				<input type='text' />
 			</div>
 			<div style='padding: 20;'>
-				<textarea rows='20'></textarea>
+				<textarea id="textarea" rows='20'></textarea>
 			</div>
 			<div id="testLogger"></div>
 		</form>
