move jsVimTest up to root directory (I no longer hope to use autospec)

--- a/test.html
+++ b/test.html
@@ -44,6 +44,6 @@
 		</form>
 		<script type='text/javascript' src='prototype.js'></script>
 		<script type='text/javascript' src='jsVim.js'></script>
-		<script src="spec/jsVim/jsVimTest.js"></script> 
+		<script src="jsVimTest.js"></script> 
 	</body>
 </html>
